--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="header-section">
+<header class="header-section" style="background-color: red;">
   <div class="header-top">
     <div class="container">
       <div *ngIf="this.CmSvc.Is_Logged_In.value == false" class="ht-left">
