changed email in footer

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -9,7 +9,7 @@
           <ul>
             <li>Address: 11-11 Road 11 22 22</li>
             <li>Phone: +00 00.000.000</li>
-            <li>Email: therichposts@gmail.com</li>
+            <li>Email: servengine@gmail.com</li>
           </ul>
           <div class="footer-social">
             <a><i class="fa fa-facebook"></i></a>
